--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,3 @@
-body {
-  margin: 0;
-}
 
 header {
   display: flex;
@@ -9,6 +6,9 @@ header {
   padding: 10px;
 }
 
+body {
+  margin: 0;
+}
 /* Navigation bar */
 
 .logo {
@@ -27,6 +27,7 @@ header {
   color: #575555;
   padding: 23px 30px;
   text-decoration: none;
+  align-self: flex-end;
   font-size: 16px;
   font-family: sans-serif;
   letter-spacing: 3px;
@@ -99,6 +100,7 @@ h1 {
 .big-news {
   display: inline-flex;
   padding: 30px;
+  background-color:#f6f4e6 ;
 }
 
 .big-news img {
@@ -150,7 +152,7 @@ h2 {
 
 .footer {
   text-align: center;
-  background-color:#f7e7bd;
+  background-color:#f6f4e6;
   width: 100%;
   height: 125px;
   line-height: 100px;
