--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,310 @@
-html {
-  background: #0025ff;
-  color: #fff;
+git html,
+body {
+  background: pink;
+  color: black;
+  margin: 0; auto;
 }
+
+h2 {
+  font-family: serif;
+  font-size: 24px;
+  opacity: 0.8;
+}
+
+h3 {
+  font-family: Helvetica Neue;
+  font-size: 13px;
+  line-height: 1.4;
+  opacity: 0.5;
+}
+
+p {
+  font-family: Helvetica Neue;
+  font-size: 15px;
+  line-height: 1.4;
+  opacity: 0.8; 
+}
+
+/*** HEADER ***/
+
+header {
+  background: beige;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  font-size: 18px;
+}
+
+#site-name {
+  color: black;
+  opacity: 0.8;
+  font-size: 34px;
+  font-family: ITC Avantgarde, serif;
+  font-weight: bolder;
+}
+
+header img {
+  width: 100px;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background:black;
+  opacity: 0.8;
+  border-radius: 50px;
+}
+
+nav {
+  display: none;
+}
+
+nav a {
+  color: black;
+  text-decoration: none;
+  opacity: 0.8;
+  padding-right: 5px;
+}
+
+/*** BANNER ***/
+
+ .banner-container {
+  display: flex;
+  height: 50px;
+  background-color: blue;
+  animation-duration: 2s;
+  animation-name: example;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  align-items: center;
+  justify-content: center;
+ }
+
+ .banner-container p {
+   margin: 0;
+ }
+
+ @keyframes example {
+   from {background-color: brown;}
+   to {background-color: turquoise;}
+ }
+
+ 
+/*
+hr {
+  border-bottom: black, solid, 0.5px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+*/
+
+/*** BIG NEWS ***/
+
+.big-news-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px; 
+  
+}
+
+.big-news-container h2 {
+  font-size: 30px;
+}
+
+.big-news-container p {
+  font-size: 18px;
+  line-height: 1.4;
+}
+
+img.top {
+  width: 100%;
+  margin-top: 10px;
+}
+
+.big-news-container div {
+  text-align: center;
+  
+}
+
+/*** SMALL NEWS ***/
+
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+  padding: 20px; 
+  margin-bottom: 20px;
+
+  box-shadow: 0 8px 12px 0 rgba(7, 7, 7, 0.2);
+  transition: 0.3s;
+
+  border: solid 1px grey;
+  border-radius: 3px;
+    /*align-items: stretch;*/
+
+}
+
+p {
+    margin-top: -18px;
+
+}
+
+.cards img {
+  width: 100%; 
+  
+}
+
+footer {
+  background: beige;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  font-size: 18px;
+  font-weight: lighter;
+  justify-content: space-between;
+  margin-top: 24px;
+  
+}
+
+{
+
+}
+
+footer img {
+  width: 100px;
+}
+
+
+/*** MEDIA QUERIES ***/
+
+@media (min-width: 688px) {
+  
+  header {
+    position: relative;
+  }
+
+  p.site-name {
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+
+  nav {
+    display: inline-block;
+    margin-left: auto;
+  }
+  
+  .hamburger {
+    display: none;
+  }
+
+  .big-news-container {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .big-news-container div {
+    text-align: left;
+    width: 50%;
+  }
+
+  .small-news-container {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: space-evenly;
+  }
+
+  .cards {
+    width: 40%;
+    text-align: left; 
+    
+  }
+
+
+
+  .big-news-container div {
+    text-align: left;
+    width: 50%;
+  }
+
+  img.top {
+    width: 50%;
+  }
+
+  hr {
+    display: none;
+  }
+}
+
+footer p {
+  margin-bottom: 0;
+}
+
+
+
+@media (min-width: 992px) {
+  
+  header {
+    position: relative;
+  }
+
+  p.site-name {
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+
+  nav {
+    display: inline-block;
+    margin-left: auto;
+  }
+  .hamburger {
+    display: none;
+  }
+
+  img.top {
+    width: 50%;
+  }
+
+  .big-news-container {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .big-news-container div {
+    text-align: left;
+    width: 50%;
+  }
+
+  .small-news-container {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: space-evenly;
+  }
+
+  .cards {
+    width: 20%;
+    text-align: left; 
+  }
+} 
+
+
