--- a/code/style.css
+++ b/code/style.css
@@ -47,13 +47,13 @@ h3 {
 }
 
 article {
-  flex-basis: 24%;
-  align-items: center;
-  margin: 5px;
+  flex-basis: 22%;
+  margin: 12px;
+  padding: 8px;
+  justify-content: space-evenly;
   background-size: cover;
   background-position: center;
   height: 200px;
-  width: 200px;
   -webkit-box-shadow: 0px -10px 25px -16px rgba(148,140,148,1);
   -moz-box-shadow: 0px -10px 25px -16px rgba(148,140,148,1);
   box-shadow: 0px -10px 25px -16px rgba(148,140,148,1);
@@ -69,7 +69,7 @@ article p {
 }
 
 .background-mask {
-  background-color: rgba(255, 255, 255, 0.582);
+  background-color: rgba(255, 255, 255, 0.671);
   height: 100%;
   opacity: 1;
   display: flex;
@@ -100,7 +100,8 @@ h1 {
 .big-news {
   display: inline-flex;
   padding: 30px;
-  background-color:#f6f4e6 ;
+  background-color:#f6f4e6;
+  margin: 25px;
 }
 
 .big-news img {
@@ -127,7 +128,7 @@ hr {
   background-image: linear-gradient(
     to right,
     rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 0.75),
+    rgba(58, 57, 57, 0.75),
     rgba(0, 0, 0, 0)
   );
 }
@@ -145,13 +146,13 @@ h2 {
   display: flex;
   flex-direction:row;
   flex-wrap: wrap;
-  justify-items: center;
-  align-items: center;
-  padding: 10px;
+  justify-content: center;
+  padding:5px;
 }
 
 .footer {
   text-align: center;
+  padding: 0px;
   background-color:#f6f4e6;
   width: 100%;
   height: 125px;
@@ -202,7 +203,7 @@ h2 {
   }
 
   article {
-    flex-basis: 42%;
+    flex-basis: 39%;
     margin: 18px;
     border: #fff solid 10px;
     background-size: cover;
