--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,47 @@ html {
   background: #0025ff;
   color: #fff;
 }
+
+/**** Header ****/
+header {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav {
+  width: 50%;
+  display: flex;
+  /* border: 2px solid blue; */
+  justify-content: space-evenly;
+}
+
+.logo {
+  width: 50px;
+  height: 50px;
+}
+
+/* When this rule is satisfied */
+@media (max-width: 700px) {
+  /* Apply these styles */
+  .order-1 {
+    order: 1;
+  }
+
+  .order-2 {
+    order: 2;
+  }
+}
+
+p {
+  font-family: 'Times New Roman', Times, serif;
+}
+
+h1 {
+  font-family: Helvetica;
+}
+
+/**** Big News ****/
+
+/**** News Grid ****/
