--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,49 @@ html {
   background: #0025ff;
   color: #fff;
 }
+/* Header */
+header {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav{
+  width: 50%;
+  border: 1px solid blue;
+  display: flex;
+  justify-content: space-evenly;
+
+}
+
+.logo {
+  width: 50px;
+  height: 50px;
+}
+
+
+@media (max-width: 700px) {
+  .order-1 {
+    order: 1;
+  }
+  
+  .order-2 {
+    order: 2;
+  }
+
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif, ;
+}
+
+p {
+  font-family: 'Times New Roman';
+}
+
+
+
+/* Big News */
+
+/*News Grid*/
