--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,50 @@ html {
   background: #0025ff;
   color: #fff;
 }
+
+/*** HEADER ***/
+.logo { /*all imgs in header*/
+  width: 50px;
+  height: 50px;
+}
+
+.order-1 {
+  order: 1;
+}
+
+.order-2 {
+  order: 2;
+}
+
+@media (max-width: 700px) {
+  .order-1 {
+    order: 1;
+  }
+
+  .order-2 {
+    order: 2;
+  }
+}
+
+header {
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav {
+  width: 50%;
+  display: flex;
+  /**border: 2px solid blue;**/
+  justify-content: space-evenly;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+p {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
