added logo and nav with flexbox

--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,23 @@ html {
   background: #0025ff;
   color: #fff;
 }
+
+header img {
+  width: 80px;
+}
+
+header {
+  background-color: white;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav {
+  /* border: 2px solid blue; */
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
+  padding: 10px;
+}
