--- a/code/style.css
+++ b/code/style.css
@@ -1,8 +1,8 @@
-git html,
+html,
 body {
-  background: pink;
+  background:whitesmoke;
   color: black;
-  margin: 0; auto;
+  margin: 0 auto;
 }
 
 h2 {
@@ -34,6 +34,7 @@ header {
   align-items: center;
   padding: 0 16px;
   font-size: 18px;
+  justify-content: space-around;
 }
 
 #site-name {
@@ -81,9 +82,9 @@ nav a {
  .banner-container {
   display: flex;
   height: 50px;
-  background-color: blue;
-  animation-duration: 2s;
-  animation-name: example;
+  background-color:#2ee98b;
+  animation-duration: 1.5s;
+  animation-name: subscribe;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   align-items: center;
@@ -91,31 +92,45 @@ nav a {
  }
 
  .banner-container p {
-   margin: 0;
+   margin: 0px;
  }
 
- @keyframes example {
-   from {background-color: brown;}
+ @keyframes subscribe {
+   from {background-color:beige}
    to {background-color: turquoise;}
  }
 
- 
-/*
+ .banner-container p:hover {
+   animation: shake 0.5s;
+   animation-iteration-count: infinite;
+ }
+
+ @keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 hr {
   border-bottom: black, solid, 0.5px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 25px;
+  margin-right: 25px;
 }
-*/
 
 /*** BIG NEWS ***/
 
 .big-news-container {
   display: flex;
   flex-direction: column;
-  margin-left: 10px;
-  margin-right: 10px; 
-  
+  margin: 20px 20px 0 20px;  
 }
 
 .big-news-container h2 {
@@ -127,50 +142,47 @@ hr {
   line-height: 1.4;
 }
 
-img.top {
-  width: 100%;
-  margin-top: 10px;
+.big-news-container:hover {
+  opacity: 0.7;
 }
 
-.big-news-container div {
-  text-align: center;
-  
+img.top {
+  width: 100%;
 }
 
 /*** SMALL NEWS ***/
 
+.small-news-container{
+  margin: 20px;
+}
 
 .cards {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 10px;
-  margin-right: 10px;
   text-align: center;
   padding: 20px; 
   margin-bottom: 20px;
-
-  box-shadow: 0 8px 12px 0 rgba(7, 7, 7, 0.2);
+  box-shadow: 0 2px 5px 0 #d3d3d3;
   transition: 0.3s;
-
-  border: solid 1px grey;
-  border-radius: 3px;
+  border: solid 1p;
     /*align-items: stretch;*/
+}
 
+.cards:hover{
+  opacity: 0.7;
 }
 
 p {
     margin-top: -18px;
-
 }
 
 .cards img {
   width: 100%; 
-  
 }
 
 footer {
   background: beige;
-  height: 100px;
+  height: 50px;
   display: flex;
   align-items: center;
   padding: 16px;
@@ -178,17 +190,15 @@ footer {
   font-weight: lighter;
   justify-content: space-between;
   margin-top: 24px;
-  
-}
-
-{
-
 }
 
 footer img {
   width: 100px;
 }
 
+footer p {
+  margin: 0;
+}
 
 /*** MEDIA QUERIES ***/
 
@@ -197,13 +207,12 @@ footer img {
   header {
     position: relative;
   }
-
-  p.site-name {
-    justify-content: center;
+/*
+  #site-name {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
-  }
+  }*/
 
   nav {
     display: inline-block;
@@ -217,12 +226,21 @@ footer img {
   .big-news-container {
     display: inline-flex;
     flex-direction: row;
-    justify-content: center;
+    padding: 25px 0 25px 0;
+    border-bottom: 2px solid black;
+    /*justify-content: center;*/
   }
 
-  .big-news-container div {
-    text-align: left;
-    width: 50%;
+  img.top {
+    width: 58%;
+    max-height: 320px;
+    margin-left: 20px;
+  }
+
+  .top-text {
+    margin: 0 25px 0 30px;
+    width: 42%;
+    text-align: left; 
   }
 
   .small-news-container {
@@ -233,31 +251,13 @@ footer img {
 
   .cards {
     width: 40%;
-    text-align: left; 
-    
-  }
-
-
-
-  .big-news-container div {
-    text-align: left;
-    width: 50%;
-  }
-
-  img.top {
-    width: 50%;
+    text-align: left;  
   }
 
   hr {
     display: none;
   }
 }
-
-footer p {
-  margin-bottom: 0;
-}
-
-
 
 @media (min-width: 992px) {
   
@@ -276,12 +276,14 @@ footer p {
     display: inline-block;
     margin-left: auto;
   }
+
   .hamburger {
     display: none;
   }
 
-  img.top {
-    width: 50%;
+  main {
+    margin: 0 auto;
+    width: 80%;
   }
 
   .big-news-container {
@@ -292,8 +294,14 @@ footer p {
 
   .big-news-container div {
     text-align: left;
-    width: 50%;
+    width: 38%;
   }
+
+  img.top {
+    width: 58%;
+    max-height: 600px
+  }
+
 
   .small-news-container {
     display: flex;
