--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,33 @@ html {
   background: #0025ff;
   color: #fff;
 }
+
+/*Header*/
+
+header {
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav {
+  border: 1px solid blue;
+}
+
+h1 {
+  font-family: Helvetica;
+}
+
+p { 
+  font-family: Times New Roman, Times, serif;
+}
+
+header img {
+  width: 50px;
+  height: 50px;
+}
+
+/*Big News*/
+
+/*News Grid*/
