--- a/code/style.css
+++ b/code/style.css
@@ -13,8 +13,15 @@ header {
 }
 
 nav {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
 }
+
+
+
+
 
 h1 {
   font-family: Helvetica;
@@ -32,3 +39,13 @@ header img {
 /*Big News*/
 
 /*News Grid*/
+
+@media (max-width: 700px){
+  .order-1 {
+    order: 1;
+  }
+  
+  .order-2  {
+  order: 2;
+  }
+}
