--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,174 @@
+/* General */
+
 html {
-  background: #0025ff;
-  color: #fff;
+  background: white;
+  color:black;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+/* Header */
+
+header {
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 16px;
+  top:0;
+  width: 100%;
+  position: fixed;
+  box-shadow: 1px 1px 2px -1px rgba(46,46,46,1);
+
+}
+
+nav {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+nav a {
+  font-size: 14px;
+  color: white;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+img.logo {
+
+}
+
+/* input responsive css criterias */
+@media (max-width: 667px) {
+
+  .order-1 {
+      order: 1;
+  }
+  
+  .order-2 {
+      order: 2;
+  }
+  }
+
+/* Newsletter subcription section */
+
+section.newsletter {
+  background-image: url("img/newsletter-background.jpg");
+  height:250px;
+  background-repeat:no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+
+h2.newsletter {
+  font-size: 20px;
+  font-style: italic;
+  margin: 16px;
+}
+
+button.newsletter {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 14px 22px;
+  margin: 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  cursor: pointer;
+  box-shadow: 1px 1px 2px -1px rgba(46,46,46,1);
+}
+
+button.newsletter:hover {
+  background-color: #80695a;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+button.newsletter:active {
+  color: red;
+  border: none
+}
+
+/* input responsive css criterias */
+@media (max-width: 667px) {
+
+  .order-1 {
+      order: 1;
+  }
+  
+  .order-2 {
+      order: 2;
+  }
+  }
+
+/* Big news section */
+
+section.big-news {
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  flex-direction: column;
+}
+
+img.big-news {
+  width: 1200px;
+  margin-top: 70px;
+  box-shadow: 1px 1px 2px -1px rgba(46,46,46,1);
+}
+
+img.big-news:hover {
+  opacity: 0.85;
+}
+
+a.title-news {
+  text-decoration: none;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  margin-top: 2.5px;
+}
+
+a.intro-big {
+  text-decoration: none;
+  color: black;
+  font-style: italic;
+  font-size: 32px;
+  margin-top: 5px;
+}
+
+.first-pic {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  align-items: left;
+  width: 1200px;
+}
+
+/* input responsive css criterias */
+@media (max-width: 667px) {
+
+  .order-1 {
+      order: 1;
+  }
+  
+  .order-2 {
+      order: 2;
+  }
+  }
+
+
+
+
+
