--- a/code/style.css
+++ b/code/style.css
@@ -2,6 +2,38 @@ body {
   margin: 0;
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+ }
+
 ul {
   list-style-type: none;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+ }
+
+ li {
+  margin: 0 10px;
+  font-family: 'Catamaran', sans-serif;
+ }
+
+ .logo li {
+   font-weight: 700;
+}
+
+ .desktop-menu li {
+   font-weight: 400;
+ }
+
+ .main-news img {
+   width: 100%;
+ }
+
+.news-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
