--- a/code/style.css
+++ b/code/style.css
@@ -99,7 +99,7 @@ html{
       box-shadow: 5px 10px 18px #888888;
   }
   .article-card img{
-      width: 75%;
+      width: 100%;
   }
 
   @media (min-width: 668px){
@@ -120,12 +120,23 @@ html{
          }
   }
   @media (min-width: 1025px){
-      .article-card{
+    main{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .card-container{
+      max-width: 1080px;
+    }  
+    .article-card{
           max-width: 200px;
       }
       h1{
           display: block;
           font-size: 65px;
           text-align: center;
+      }
+      header img{
+        max-width: 350px;
       }
   }
