added logo and navigation

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,39 @@
+/* General styling */
 html {
-  background: #0025ff;
-  color: #fff;
+  background: whitesmoke;
+  color: black;
 }
+
+h1 {
+  font-family: 'Times New Roman', Times, serif;
+}
+
+/* Header */
+header img {
+  height: 50px;
+  width: 50px;
+}
+header {
+  background: white;
+  padding: 20px;
+  border: 10px solid gray;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+nav {
+
+}
+
+
+
+
+/* Big news */
+
+
+
+/* General news  */
+
+
+/* Footer  */
